updates to CREATE/GET route handlers in hives.js and other changes

--- a/views/welcome.html
+++ b/views/welcome.html
@@ -2,11 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <title>Generate a JWT</title>
+        <title>Bee-come a Beekeeper!</title>
         <link rel="stylesheet" href="../index.css">
     </head>
     <body>
-        <h1>Generate a JWT</h1>
+        <h1>Welcome!</h1>
         <p>
             If you click the link below, you will be brought to a page 
             that will ask you to login with your Google credentials. This
