Minor changes to make error messages consistent

--- a/views/welcome.html
+++ b/views/welcome.html
@@ -11,8 +11,9 @@
             If you click the link below, you will be brought to a page 
             that will ask you to login with your Google credentials. This
             app will request access to your Google profile. After authorization,
-            your first and last name will be displayed along with a
-            JWT that can be used to authenticate with the /boats API.
+            you will be added into our database as a beekeeper. A page will display 
+            your first and last name along with a JWT that can be used to
+            authenticate with the protected endpoints at /hives.
         </p>
         <form method="POST" action="/">
             <button type="submit">
